# password-stretcher

./: README.md  pyproject.toml  requirements.txt  stretcher.py
lib/: leet.py  mangler.py  mutator.py  pend.py  spider.py  utils.py
lists/: top100000_digit_special.rules
password_stretcher/: stretcher.py
password_stretcher/lib/: cap.py  deconstruct.py  errors.py  mangler.py  perm.py  policy.py  spider.py  utils.py
password_stretcher/lists/: top100000_digit_special.rules
