[tool.poetry]
name = "password-stretcher"
version = "1.0.0"
description = "A deadly password mangler"
authors = ["TheTechromancer"]
license = "GPL-3.0"

[tool.poetry.scripts]
password-stretcher = 'password_stretcher.stretcher:main'

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
Unidecode = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
